--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -54,7 +54,7 @@ const navItems = [
             >
           </div>
           <div class="flex flex-col">
-            <h1 class="text-3xl font-bold tracking-widest">
+            <h1 class="text-2xl md:text-3xl font-bold tracking-widest">
                 <span class="headerr">TECHPi</span>
                 <span class="font-medium tracking-tighter">&reg;</span>
             </h1>
